--- a/package.json
+++ b/package.json
@@ -43,7 +43,16 @@
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.2",
     "request": "^2.69.0",
-    "swig": "~1.4.1"
+    "swig": "~1.4.1",
+    "body-parser": "^1.14.2",
+    "express": "^4.13.3",
+    "fluent-ffmpeg": "^2.0.1",
+    "jfs": "^0.2.6",
+    "mustache": "^2.2.1",
+    "request": "^2.67.0",
+    "ws": "^1.0.1",
+    "youtube-uploader": "^0.1.0",
+    "youtube-video-api": "^0.3.4"
   },
   "devDependencies": {
     "supertest": "~0.14.0",
@@ -66,6 +75,10 @@
     "karma-coverage": "~0.2.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-phantomjs-launcher": "~0.1.2"
+    "karma-phantomjs-launcher": "~0.1.2",
+    "jscs": "^2.7.0",
+    "mocha": "^2.4.5",
+    "should": "^8.0.2",
+    "winston": "^2.1.1"
   }
 }
